--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "naman-platform-new-age",
   "version": "1.0.0",
-  "description": "",
+  "description": "a bundle with latest standards for react and tailwind",
   "main": "index.js",
   "directories": {
     "example": "example"
@@ -13,8 +13,8 @@
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
   "lint-staged": {
-    "**/*": [
-      "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "src/**/*.{js,jsx}": [
+      "eslint \"src/**/*.{js,jsx}\" --fix",
       "prettier --write \"src/**/*.{js,jsx}\""
     ]
   },
@@ -32,10 +32,16 @@
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "prettier": "2.5.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
