--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naman-platform-new-age",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a bundle with latest standards for react and tailwind",
   "source": [
     "src/index.js",
@@ -25,7 +25,7 @@
     "prepare": "husky install",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "build": "rm -rf ./dist && microbundle"
+    "build": "rm -rf ./dist && microbundle --jsx React.createElement --jsxFragment React.Fragment --jsxImportSource react"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
@@ -45,7 +45,6 @@
   },
   "homepage": "https://github.com/namanavasthi/naman-platform-new-age#readme",
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.16.7",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
